--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/relation_snippet_direct.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/relation_snippet_direct.vm
@@ -5,7 +5,7 @@
 #set($relatedDataRow = $view.getTableDataRow($relatedTable, $relatedRowId))
 #set($snippet = "")
 #set($fieldDisplayValue = $relatedDataRow.get($field.getDisplayField()))##
-#foreach($relatedField in $relatedDataRow.keySet())
+#foreach($relatedField in $relatedTable.getFields())
   #if(!$relatedField.equals($relatedField.getTableContainingField().getPrimaryKey()))
   #set($fieldValue = $relatedDataRow.get($relatedField))
     #if(($fieldValue != "") && ($fieldValue != "false"))
