--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/report_fields/option_sets/joins_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/report_fields/option_sets/joins_data.vm
@@ -129,17 +129,17 @@
     ##set($joinedTables = $report.getJoinedTables())
     ##set($joinedReports = $report.getJoinedReports())
     <!-- links to add new joins -->
-    #set($dependentTables = $view.getDirectlyDependentTables($reportTable))
+    #set($downwardCandidateJoins = $view.getCandidateJoins($report, false))
     <tr>
 			<td class="leading">&nbsp;</td>
 			<td colspan="5">
-				#foreach($candidateJoin in $view.getCandidateJoins($report))
+				#foreach($candidateJoin in $view.getCandidateJoins($report, true))
 					#set($leftField = $candidateJoin.getLeftTableField())
 					#set($rightField = $candidateJoin.getRightTableField())
 					<a target="pane_2" href="?return=gui/reports_and_tables/report_data&add_join_to_report=true&leftinternaltablename=$leftField.getTableContainingField().getInternalTableName()&leftinternalfieldname=$leftField.getInternalFieldName()&rightinternaltablename=$rightField.getTableContainingField().getInternalTableName()&rightinternalfieldname=$rightField.getInternalFieldName()&jointype=$candidateJoin.getJoinType().name()">Join $leftField.getTableContainingField() to $rightField.getTableContainingField()</a><br>
 				#end
-        #if($dependentTables.size() > 0)
-          <a title="Add a join down to a child table" href="#" onclick="$('#addDownwardJoin').show();">Add joins down to child tables</a>
+        #if($downwardCandidateJoins.size() > 0)
+          <a title="Add a join down to a child table, or a manual join" href="#" onclick="$('#addDownwardJoin').show();">Add joins down to child tables</a>
         #else
           <a title="add a more complex join, e.g. to a report or a calculated field" href="#" onclick="$('#addNewJoin').show();">Add a complex join manually</a>
         #end
@@ -151,15 +151,12 @@
     <tr id="addDownwardJoin">
       <td class=leading height="20">&nbsp;</td>
       <td colspan="5">
-      #foreach($dependentTable in $dependentTables)
-        #foreach($field in $dependentTable.getFields())
-          #if($field.getRelatedTable().equals($reportTable))
-            #set($rightField = $field)
-            <a target="pane_2" href="?return=gui/reports_and_tables/report_data&add_join_to_report=true&leftinternaltablename=$leftField.getTableContainingField().getInternalTableName()&leftinternalfieldname=$leftField.getInternalFieldName()&rightinternaltablename=$rightField.getTableContainingField().getInternalTableName()&rightinternalfieldname=$rightField.getInternalFieldName()&jointype=LEFT_OUTER">Join $leftField.getTableContainingField() down to $rightField.getTableContainingField()</a><br>
-          #end
-        #end
+      #foreach($candidateJoin in $downwardCandidateJoins)
+        #set($leftField = $candidateJoin.getLeftTableField())
+        #set($rightField = $candidateJoin.getRightTableField())
+        <a target="pane_2" href="?return=gui/reports_and_tables/report_data&add_join_to_report=true&leftinternaltablename=$leftField.getTableContainingField().getInternalTableName()&leftinternalfieldname=$leftField.getInternalFieldName()&rightinternaltablename=$rightField.getTableContainingField().getInternalTableName()&rightinternalfieldname=$rightField.getInternalFieldName()&jointype=$candidateJoin.getJoinType().name()">Join $leftField.getTableContainingField() to $rightField.getTableContainingField()</a><br>
       #end
-      #if($dependentTables.size() > 0)
+      #if($downwardCandidateJoins.size() > 0)
         <a title="add a more complex join, e.g. to a report or a calculated field" href="#" onclick="$('#addNewJoin').show();">Add a more complex join manually</a>
       #end
       </td>
