timeline display tweak

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
@@ -228,6 +228,8 @@
 			#if($dateAxis)
         #if($scatter)
           defaultSeriesType: 'scatter',
+        #elseif($timeline)
+          defaultSeriesType: 'line',
         #else
           defaultSeriesType: 'area',
         #end
