timeline display tweak

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
@@ -248,7 +248,10 @@
 		 #if($title != "")
 		   title: {
 		     text: "$title",
-			 style: { textTransform: 'capitalize' }
+         #if($timeline)
+           floating: true,
+         #end
+			   style: { textTransform: 'capitalize' }
 		   },
 		   #if($subtitle != "")
 		     subtitle: {
