timeline: disable legends

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
@@ -293,7 +293,7 @@
 		 #end
 		 legend: {
       #if($timeline)
-        enabled: false;
+        enabled: false
       #else
 		 	  style: {
 ##		      position: 'absolute',
