Attempt to link timeline and chart timespans

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
@@ -391,7 +391,10 @@
     		},
 		 },
          series: $series
-      });
+    });
+    if (typeof abCharts == "object") {
+      abCharts.push($chart_id);
+    }
   </script>
 #end ## end javascript
 #end
