Attempt to link timeline and chart timespans: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
@@ -392,7 +392,7 @@
 		 },
          series: $series
     });
-    alert("Created chart " + $chart_id.options.title.text);
+    alert("Created chart " + ${chart_id}.options.title.text);
     if (typeof abCharts == "object") {
       abCharts.push($chart_id);
     }
