--- a/gtpb_clientside/website/a3/a3.css
+++ b/gtpb_clientside/website/a3/a3.css
@@ -115,6 +115,10 @@ html, body {
     cursor: text;
 }
 
+.editable p {
+  margin: 0;
+}
+
 .editable a {
   color: black;
   text-decoration: none;
