--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
@@ -20,6 +20,7 @@
 <html>
   <head>
 	<link href="styles/report.css" type="text/css" rel="stylesheet" />
+  <link href="resources/tabs/tabs.css" type="text/css" rel="stylesheet" />
 	<link href="resources/modalFramework/modalFramework.css" type="text/css" rel="stylesheet" />
 	<link href="resources/button/button.css" type="text/css" rel="stylesheet" />
     <style>
