Printout stylesheet fof multiple rows

--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
@@ -99,7 +99,7 @@
 	}
     </script>
   </head>
-  <body oncontextmenu="return false" isDraft="true"> ## err on the side of caution and mark as a draft by default.  This will be changed when the doc loads if it's not a draft
+  <body isDraft="true" style="background-color: white; overflow: visible"> ## err on the side of caution and mark as a draft by default.  This will be changed when the doc loads if it's not a draft
     <h1 class="draftMarker">DRAFT ONLY</h1>
     <h2 style="float:left;">$module - $report</h2>
 	<div style="float:right;">
