--- a/gtpb_clientside/resources/tabs/manage_tabs.css
+++ b/gtpb_clientside/resources/tabs/manage_tabs.css
@@ -21,7 +21,7 @@
    }
     *[changed] { text-decoration:underline }
     .changed { text-decoration:underline }
-    .saved { border-right: 1em solid green; border-bottom: 1px solid gray; }
+    .saved:after { url("resources/icons/tick.png"); }
 	*[error] { color:red }
 	a[error] { font-size:8pt }
     	           
