Field saved notification image

--- a/gtpb_clientside/resources/tabs/manage_tabs.css
+++ b/gtpb_clientside/resources/tabs/manage_tabs.css
@@ -21,7 +21,7 @@
    }
     *[changed] { text-decoration:underline }
     .changed { text-decoration:underline }
-    .saved:after { url("resources/icons/tick.png"); }
+    .saved:after { content:url("resources/icons/tick.png"); }
 	*[error] { color:red }
 	a[error] { font-size:8pt }
     	           
