--- a/gtpb_clientside/resources/tabs/manage_tabs.css
+++ b/gtpb_clientside/resources/tabs/manage_tabs.css
@@ -13,64 +13,71 @@ table#reportData tbody tr button.globalEdit {
 /* Report fields tab CSS */
 
   
- * {
-   -moz-box-sizing: border-box;
-   -webkit-box-sizing: border-box;
-   -ms-box-sizing: border-box;
-   box-sizing: border-box;
- }
- *[changed] { text-decoration:underline }
- .changed { text-decoration:underline }
- .saved { background:url('resources/icons/tick.png'); }
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
+*[changed] { text-decoration:underline }
+.changed { text-decoration:underline }
+.saved {
+	background-image:url('/agileBase/resources/icons/tick.png');
+	background-repeat: no-repeat;
+	background-position: right top;
+}
 *[error] { color:red }
 a[error] { font-size:8pt }
    	           
 #navigation { position:absolute; 
-       height:100%;
-       width:120px;
-       background-color:#f1f2ed;
-       border-top:2px solid #cccccc;
-       border-right:1px solid #cecece;
-       top:0;
-       left:0;
-       text-align:center;
+  height:100%;
+  width:120px;
+  background-color:#f1f2ed;
+  border-top:2px solid #cccccc;
+  border-right:1px solid #cecece;
+  top:0;
+  left:0;
+  text-align:center;
   overflow:auto;
 }
-			
+
 #navigation button { margin:5px }
-               
-   .options_wrapper { padding-left:120px; 
-   		           height:100%;
-                      width:100%;
-                      position:absolute;
-                      top:0;
-                      left:0; }
-                      
-   .options_wrapper div.options_set { display:none;
-   	                               position:relative;
-                                      padding-top:40px;
-								   padding-left:30px;
-   	                               height:100%; 
-   		                           width:100% }
-   		                                   
-   .options_wrapper div.options_set[selected] { display:block }    		                                   
-   		                                                          
-   .options_wrapper div.options_set h1 { position:absolute;
-   	                                  top:0;
-   	                                  left:30px;
-   	                                  width:100%;
-   	                                  height:27px; 
-   	                                  font-size:14pt;
-                                         font-weight:normal;
-                                         border-bottom:1px solid black}                       
-                      
-   .options_wrapper div.options_set div.data  { height:100%;
-                                                width:100%;;
-                                                padding-top:10px;
-                                                overflow:auto }					
-                      
-  
-   .options_wrapper div.options_set tr:first-child:hover, 
+
+.options_wrapper { padding-left:120px; 
+  height:100%;
+  width:100%;
+  position:absolute;
+  top:0;
+  left:0;
+}
+
+.options_wrapper div.options_set { display:none;
+   position:relative;
+   padding-top:40px;
+   padding-left:30px;
+   height:100%; 
+   width:100%;
+}
+
+.options_wrapper div.options_set[selected] { display:block }    		                                   
+
+.options_wrapper div.options_set h1 { position:absolute;
+   top:0;
+   left:30px;
+   width:100%;
+   height:27px; 
+   font-size:14pt;
+   font-weight:normal;
+   border-bottom:1px solid black;
+}                       
+
+.options_wrapper div.options_set div.data  { height:100%;
+   width:100%;;
+   padding-top:10px;
+   overflow:auto;
+}                    
+
+.options_wrapper div.options_set tr:first-child:hover, 
 .options_wrapper div.options_set tr.trailing { background-color:transparent }
    
    .options_wrapper div.options_set th { text-transform:uppercase;
