--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/number.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/number.vm
@@ -30,9 +30,9 @@
   #end##
   	#if($userCanEdit)##
   	  #if($globalEdit || (!$updateAsType))##
-  	    		$currencySymbol <input type="number" name="$field.getInternalFieldName()" value="$fieldValue" onfocus="this.setAttribute('focused','true')" onblur="this.removeAttribute('focused')">##
+  	    		$currencySymbol <input type="text" name="$field.getInternalFieldName()" value="$fieldValue" onfocus="this.setAttribute('focused','true')" onblur="this.removeAttribute('focused')">##
   	  #else##
-  	    		$currencySymbol <input type="number" #if($field.getNotNull()) required #end gtpb_rowid="$sessionRowId" gtpb_update_record name="$field.getInternalFieldName()" value="$fieldValue" onkeyup="top.oBuffer.writeBuffer(this)" onpaste="top.oBuffer.writeBuffer(this)" maxKeyCount="4" onfocus="this.setAttribute('focused','true')" onblur="this.removeAttribute('focused'); #if($mobile_device) top.oBuffer.writeBuffer(this); #end">##
+  	    		$currencySymbol <input type="text" #if($field.getNotNull()) required #end gtpb_rowid="$sessionRowId" gtpb_update_record name="$field.getInternalFieldName()" value="$fieldValue" onkeyup="top.oBuffer.writeBuffer(this)" onpaste="top.oBuffer.writeBuffer(this)" maxKeyCount="4" onfocus="this.setAttribute('focused','true')" onblur="this.removeAttribute('focused'); #if($mobile_device) top.oBuffer.writeBuffer(this); #end">##
 				#if($field.getNotNull() && (($fieldValue == "") || $customAction))
 					<span class="mandated">* Mandatory field - please enter a value</span>
 				#end
@@ -50,9 +50,9 @@
   	#end##
   	#if($userCanEdit)##
   	  #if($globalEdit || (!$updateAsType))##
-  	    		$currencySymbol <input #if($fieldValue.contains("e")) type="text" #else type="number" #end name="$field.getInternalFieldName()" value="" onfocus="this.setAttribute('focused','true')" onblur="this.removeAttribute('focused')">##
+  	    		$currencySymbol <input type="text" name="$field.getInternalFieldName()" value="" onfocus="this.setAttribute('focused','true')" onblur="this.removeAttribute('focused')">##
   	  #else##
-  	    		$currencySymbol <input type="number" #if($field.getNotNull()) required #end gtpb_internaltablename="$sessionTable.getInternalTableName()" gtpb_rowid="$sessionRowId" gtpb_update_record name="$field.getInternalFieldName()" value="$fieldValue" onkeyup="top.oBuffer.writeBuffer(this)" onpaste="top.oBuffer.writeBuffer(this)" maxKeyCount="4" onfocus="this.setAttribute('focused','true')" onblur="this.removeAttribute('focused'); #if($mobile_device) top.oBuffer.writeBuffer(this); #end">##
+  	    		$currencySymbol <input type="text" #if($field.getNotNull()) required #end gtpb_internaltablename="$sessionTable.getInternalTableName()" gtpb_rowid="$sessionRowId" gtpb_update_record name="$field.getInternalFieldName()" value="$fieldValue" onkeyup="top.oBuffer.writeBuffer(this)" onpaste="top.oBuffer.writeBuffer(this)" maxKeyCount="4" onfocus="this.setAttribute('focused','true')" onblur="this.removeAttribute('focused'); #if($mobile_device) top.oBuffer.writeBuffer(this); #end">##
 				#if($field.getNotNull() && (($tableDataRow.get($field) == "") || $customAction))
 					<span class="mandated">* Mandatory field - please enter a value</span>
 				#end
