--- a/gtpb_clientside/WEB-INF/templates/gui/pane1.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane1.vm
@@ -62,7 +62,7 @@
 	});
     </script>
 	#end
-  <script type="text/javascript" src="resources/greyscale.js"></script>
+  <script type="text/javascript" src="resources/grayscale.js"></script>
 </head>
 <body>
 	#if($mobile_device)
