--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -17,7 +17,7 @@ table#reportData {
 }
 
 table#reportData th {
-  background-color:#f1f2ed; 
+  background-color: rgb(240,240,240); /* #f1f2ed; */
   font-size:10pt; 
   color:black;
   font-weight:bold;
