--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -135,10 +135,19 @@ table#reportData tr#currentRow td.colored {
 table#reportData tr.rowb td, 
 table#reportData tr.rowa td { 
   height:25px 
-}					 
-					 
+}
+
+.in_cell {
+  max-height: 43px;
+}
+
 table#reportData tr.rowb  { 
   background-image: url('../styles/rowb.png');
+}
+
+#wrapper table#reportData tr.rowb  { 
+  background-image: none;
+  border: 1px solid #f2f2f2;
 }
 
 table#reportData .trailing { 
