Fixed height pane 2 rows

--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -139,6 +139,12 @@ table#reportData tr.rowa td {
 
 .in_cell {
   max-height: 43px;
+  overflow: hidden;
+}
+
+.in_cell:hover {
+	background-color: white;
+	overflow:visible;
 }
 
 table#reportData tr.rowb  { 
