--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
@@ -146,9 +146,9 @@ $viewTools.startTimer("gui/pane2/pane2_body")
 		  #if($colour && $colour !="") #set($style="background-color:$colour; ") #set($class="colored") #end
 		  #if($rightAlign) #set($style = "$style text-align:right; ") #end
           <td #if($cellContentLength<=10)nowrap="true"#end #if($style != "")style="$style"#end #if($class != "")class="$class"#end>
-            <div style="min-width:${cellContentLength}px" class="in_cell"><div class="cell_in">
+            <div style="min-width:${cellContentLength}px" class="in_cell">
               #if(!(($thisUniqueId == $lastUniqueId) && ($cell == $lastValues.get($cellNumber))))$cell#else<span class="greytext">$cell</span>#end
-            </div></div>
+            </div>
           </td>
         #end
       #else ## no colour information present
