--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
@@ -137,6 +137,9 @@ $viewTools.startTimer("gui/pane2/pane2_body")
       #else
   		  #if($field.getContentSize() > 100)
           #set($cellContentLength=$cell.length() * 2)
+          #if($cellContentLength > 300)
+            #set($cellContentLength = 300)
+          #end
   		  #else
           #set($cellContentLength=$cell.length() / 2)
 		    #end
@@ -157,6 +160,9 @@ $viewTools.startTimer("gui/pane2/pane2_body")
 		  #set($field = $fields.get($cellNumber).get(1))
 		  #if($field.getContentSize() > 100)
         #set($cellContentLength=$cell.length() * 2)
+        #if($cellContentLength > 300)
+          #set($cellContentLength = 300)
+        #end
 		  #else
         #set($cellContentLength=$cell.length() / 2)
 		  #end
