--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -118,14 +118,14 @@ table#reportData td:last-child {
 }
 
 table#reportData tr#currentRow td { 
-  background-color:#ffd588;
+  background-color: rgb(56,117,215); /* #ffd588; */
   /*background-image: url(styles/selected_row_fine_angled.png);*/
   /*font-family:"Arial Bold";*/
 }				
 
 table#reportData tr#currentRow td.leading,
 table#reportData tr#currentRow td.trailing {
-  background-color:#FFBA3B;
+  background-color: rgb(56,117,215); /* #FFBA3B; */
 }	  
 
 table#reportData tr#currentRow td.colored {
